--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "dev": "ng serve --host 192.168.0.105"
+    "dev": "ng serve --host 192.168.0.105",
+    "start-appmap": "npx appmap-node ng serve --host 192.168.0.105"
   },
   "private": true,
   "dependencies": {
